--- a/slurm/slurmdbd.conf
+++ b/slurm/slurmdbd.conf
@@ -20,5 +20,5 @@ PidFile=/var/run/slurmdbd/slurmdbd.pid
 StorageType=accounting_storage/mysql
 StorageHost=mysql
 StorageUser=slurm
-StoragePass=password
+StoragePass=Ju6wreviap
 StorageLoc=slurm_acct_db
