Add coldfront container and installation files.
This commit adds a Coldfront container to docker-compose. Coldfront is
installed as it would be in a production setup, i.e. behind nginx with
ssl, coldfront runs on unix socket via gunicorn, and connects to mysql
database. We use the django_pam authentication backend so we can use the
local system user accounts and passwords that are created in the
container. This allows us to login with the same user credentials we use
to submit slurm jobs etc.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       context: .
       dockerfile: Dockerfile
       target: slurm
+      args:
+        SLURM_VERSION: $SLURM_VERSION
     command: ["slurmdbd"]
     container_name: slurmdbd
     hostname: slurmdbd
@@ -97,11 +99,35 @@ services:
     depends_on:
       - "slurmctld"
 
+  coldfront:
+    image: coldfront:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: coldfront
+      args:
+        SLURM_VERSION: $SLURM_VERSION
+    hostname: coldfront
+    container_name: coldfront
+    networks:
+      - compute
+    volumes:
+      - etc_munge:/etc/munge
+      - etc_slurm:/etc/slurm
+      - home:/home
+      - srv_www:/srv/www
+    expose:
+      - "22"
+      - "443"
+    depends_on:
+      - "mysql"
+
 volumes:
   etc_munge:
   etc_slurm:
   home:
   var_lib_mysql:
+  srv_www:
 
 networks:
   compute:
