Turn on enforcing of associations in slurm

--- a/slurm/slurm.conf
+++ b/slurm/slurm.conf
@@ -52,6 +52,8 @@ AccountingStorageType=accounting_storage/slurmdbd
 AccountingStorageHost=slurmdbd
 AccountingStoragePort=6819
 AccountingStorageLoc=slurm_acct_db
+AccountingStorageEnforce=associations,limits,qos
+AccountingStoreJobComment=YES
 
 #
 # COMPUTE NODES
