Add OnDemand container and install files.
This commit adds the necessary install files for building the OnDemand
container. Installs OnDemand with ssl enabled and PAM authentication.
The ood cluster config will access the frontend container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,27 @@ services:
     depends_on:
       - "mysql"
 
+  ondemand:
+    image: ondemand:latest
+    build:
+      context: .
+      dockerfile: ondemand/Dockerfile
+      args:
+        SLURM_VERSION: $SLURM_VERSION
+    hostname: ondemand
+    container_name: ondemand
+    networks:
+      - compute
+    volumes:
+      - etc_munge:/etc/munge
+      - etc_slurm:/etc/slurm
+      - home:/home
+    expose:
+      - "22"
+      - "80"
+    depends_on:
+      - "frontend"
+
 volumes:
   etc_munge:
   etc_slurm:
