--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
+HPCTK_VERSION=latest
 SLURM_VERSION=20.02.3
-GOSU_VERSION=1.12
 MARIADB_VERSION=5.5
-USERS="cgray sfoster csimmons astewart"
-PASSWD_cgray="test123"
