Add XDMoD container and install files.
This commit adds install files for xdmod and building the container.
Installs xdmod with ssl and default admin user. When container is first
intitialized will run `xdmod-setup` and a first ingestion and shred from
the slurm containers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,6 +148,28 @@ services:
     depends_on:
       - frontend
 
+  xdmod:
+    image: hpctk-xdmod:$HPCTK_VERSION
+    build:
+      context: ./xdmod
+      args:
+        HPCTK_VERSION: $HPCTK_VERSION
+    hostname: xdmod
+    container_name: xdmod
+    networks:
+      - compute
+    volumes:
+      - etc_munge:/etc/munge
+      - etc_slurm:/etc/slurm
+      - home:/home
+    expose:
+      - "22"
+      - "80"
+      - "443"
+    depends_on:
+      - mysql
+      - frontend
+
 volumes:
   etc_munge:
   etc_slurm:
