--- a/xdmod/Dockerfile
+++ b/xdmod/Dockerfile
@@ -1,6 +1,6 @@
-ARG HPCTK_VERSION=latest
+ARG HPCUTIL_VERSION=latest
 
-FROM hpctk-slurm:$HPCTK_VERSION
+FROM hpcutil-slurm:$HPCUTIL_VERSION
 COPY . /build
 RUN /build/install.sh && rm -rf /build
 COPY xdmod-httpd.conf /etc/httpd/conf.d/xdmod.conf
