--- a/ondemand/Dockerfile
+++ b/ondemand/Dockerfile
@@ -1,6 +1,6 @@
-ARG HPCUTIL_VERSION=latest
+ARG HPCTS_VERSION=latest
 
-FROM hpcutil-slurm:$HPCUTIL_VERSION
+FROM hpcts-slurm:$HPCTS_VERSION
 COPY . /build
 RUN /build/install.sh && rm -rf /build
 COPY cluster-config.yml /etc/ood/config/clusters.d/linux.yml
