--- a/coldfront/Dockerfile
+++ b/coldfront/Dockerfile
@@ -1,6 +1,6 @@
 ARG HPCTS_VERSION=latest
 
-FROM hpcts-slurm:$HPCTS_VERSION
+FROM ubccr/hpcts:slurm-${HPCTS_VERSION}
 COPY . /build
 RUN /build/install.sh && rm -rf /build
 COPY --chown=coldfront:coldfront local_settings.py /srv/www/coldfront/coldfront/config/local_settings.py
