Change name of slurm cluster and partition.
- Change the name of slurm cluster to: hpc
- Change the default partition to: compute
- Change compute node names to: cpn[01-02]
- Bump ood version to 1.7

--- a/ondemand/Dockerfile
+++ b/ondemand/Dockerfile
@@ -3,6 +3,6 @@ ARG HPCTS_VERSION=latest
 FROM ubccr/hpcts:slurm-${HPCTS_VERSION}
 COPY . /build
 RUN /build/install.sh && rm -rf /build
-COPY cluster-config.yml /etc/ood/config/clusters.d/linux.yml
+COPY cluster-config.yml /etc/ood/config/clusters.d/hpc.yml
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
