--- a/slurm/slurm.conf
+++ b/slurm/slurm.conf
@@ -2,7 +2,7 @@
 #
 # See the slurm.conf man page for more information.
 #
-ClusterName=linux
+ClusterName=hpc
 ControlMachine=slurmctld
 ControlAddr=slurmctld
 SlurmUser=slurm
@@ -33,7 +33,6 @@ Waittime=0
 SchedulerType=sched/backfill
 SelectType=select/cons_res
 SelectTypeParameters=CR_CPU_Memory
-FastSchedule=1
 
 #
 # LOGGING
@@ -57,8 +56,8 @@ AccountingStoreJobComment=YES
 
 #
 # COMPUTE NODES
-NodeName=c[1-2] RealMemory=1000 State=UNKNOWN
+NodeName=cpn[01-02] RealMemory=1000 State=UNKNOWN
 
 
 # PARTITIONS
-PartitionName=normal Default=yes Nodes=c[1-2] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=1 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
+PartitionName=compute Default=yes Nodes=cpn[01-02] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=1 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
