--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,11 +60,11 @@ services:
     depends_on:
       - slurmdbd
 
-  c1:
+  cpn01:
     image: ubccr/hpcts:slurm-${HPCTS_VERSION}
     command: ["slurmd"]
-    hostname: c1
-    container_name: c1
+    hostname: cpn01
+    container_name: cpn01
     networks:
       - compute
     volumes:
@@ -77,11 +77,11 @@ services:
     depends_on:
       - slurmctld
 
-  c2:
+  cpn02:
     image: ubccr/hpcts:slurm-${HPCTS_VERSION}
     command: ["slurmd"]
-    hostname: c2
-    container_name: c2
+    hostname: cpn02
+    container_name: cpn02
     networks:
       - compute
     volumes:
