--- a/slurm/slurm.conf
+++ b/slurm/slurm.conf
@@ -36,9 +36,9 @@ SelectTypeParameters=CR_CPU_Memory
 
 #
 # LOGGING
-SlurmctldDebug=3
+SlurmctldDebug=info
 SlurmctldLogFile=/var/log/slurm/slurmctld.log
-SlurmdDebug=3
+SlurmdDebug=info
 SlurmdLogFile=/var/log/slurm/slurmd.log
 JobCompType=jobcomp/filetxt
 JobCompLoc=/var/log/slurm/jobcomp.log
