--- a/slurm/slurmdbd.conf
+++ b/slurm/slurmdbd.conf
@@ -11,7 +11,7 @@ AuthType=auth/munge
 DbdAddr=slurmdbd
 DbdHost=slurmdbd
 SlurmUser=slurm
-DebugLevel=4
+DebugLevel=info
 LogFile=/var/log/slurm/slurmdbd.log
 PidFile=/var/run/slurmdbd/slurmdbd.pid
 
