--- a/slurm/slurm.conf
+++ b/slurm/slurm.conf
@@ -19,6 +19,12 @@ ProctrackType=proctrack/linuxproc
 CacheGroups=0
 ReturnToService=0
 
+# These are example prolog and epilog scripts that show how it is possible
+# to initiate performance data collection at the start and end of each
+# job.
+Prolog=/usr/local/bin/slurm-prolog.sh
+Epilog=/usr/local/bin/slurm-epilog.sh
+
 #
 # TIMERS
 SlurmctldTimeout=300
