Add ldap docker service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,26 @@
 version: "3.8"
 
 services:
+  ldap:
+    image: ubccr/hpcts:ldap-${HPCTS_VERSION}
+    build:
+      context: ./ldap
+    hostname: ldap
+    container_name: ldap
+    environment:
+      - CONTAINER_LOG_LEVEL=debug
+      - LDAP_RFC2307BIS_SCHEMA=true
+      - LDAP_TLS=false
+      - LDAP_REMOVE_CONFIG_AFTER_SETUP=false
+    networks:
+      - compute
+
   base:
     image: ubccr/hpcts:base-${HPCTS_VERSION}
     build:
       context: ./base
+    depends_on:
+      - ldap
 
   mysql:
     image: mariadb:$MARIADB_VERSION
@@ -41,6 +57,7 @@ services:
       - "6819"
     depends_on:
       - base
+      - ldap
       - mysql
 
   slurmctld:
@@ -58,6 +75,7 @@ services:
       - "22"
       - "6817"
     depends_on:
+      - ldap
       - slurmdbd
 
   cpn01:
@@ -76,6 +94,7 @@ services:
       - "22"
       - "6818"
     depends_on:
+      - ldap
       - slurmctld
 
   cpn02:
@@ -94,6 +113,7 @@ services:
       - "22"
       - "6818"
     depends_on:
+      - ldap
       - slurmctld
 
   frontend:
@@ -110,6 +130,7 @@ services:
     ports:
       - "127.0.0.1:6222:22"
     depends_on:
+      - ldap
       - slurmctld
 
   coldfront:
@@ -133,6 +154,7 @@ services:
     ports:
       - "127.0.0.1:2443:443"
     depends_on:
+      - ldap
       - mysql
       - frontend
 
@@ -156,6 +178,7 @@ services:
     ports:
       - "127.0.0.1:3443:443"
     depends_on:
+      - ldap
       - frontend
 
   xdmod:
@@ -178,6 +201,7 @@ services:
     ports:
       - "127.0.0.1:4443:443"
     depends_on:
+      - ldap
       - mysql
       - frontend
 
