Integrate containers with LDAP host using SSSD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     image: ubccr/hpcts:base-${HPCTS_VERSION}
     build:
       context: ./base
+    networks:
+      - compute
     depends_on:
       - ldap
 
