SSSD requires SSL or TLS for password checking so ensure LDAP container supports SSL/TLS and make sure that's configured for clients too. Better logging for sssd and sshd so that docker has access to those log messages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     environment:
       - CONTAINER_LOG_LEVEL=debug
       - LDAP_RFC2307BIS_SCHEMA=true
-      - LDAP_TLS=false
       - LDAP_REMOVE_CONFIG_AFTER_SETUP=false
+      - LDAP_TLS_VERIFY_CLIENT=never
     networks:
       - compute
 
