--- a/xdmod/conf/httpd.conf
+++ b/xdmod/conf/httpd.conf
@@ -9,6 +9,13 @@ Listen 443 https
     </FilesMatch>
 
     DocumentRoot /usr/share/xdmod/html
+    # Begin XDMoD SSO Configuration
+    Alias /simplesaml /usr/share/xdmod/vendor/simplesamlphp/simplesamlphp/www
+    <Directory /usr/share/xdmod/vendor/simplesamlphp/simplesamlphp/www>
+        Require all granted
+    </Directory>
+    SetEnv SIMPLESAMLPHP_CONFIG_DIR /etc/xdmod/simplesamlphp/config
+    # End XDMoD SSO Configuration
     <Directory /usr/share/xdmod/html>
         Options FollowSymLinks
         AllowOverride All
