fake sendmail for xdmod

--- a/xdmod/Dockerfile
+++ b/xdmod/Dockerfile
@@ -6,5 +6,6 @@ RUN /build/install.sh && rm -rf /build
 COPY xdmod-httpd.conf /etc/httpd/conf.d/xdmod.conf
 COPY hierarchy.csv /srv/xdmod/hierarchy.csv
 COPY scripts/ /srv/xdmod/scripts
+COPY bin/sendmail /usr/sbin/sendmail
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
