Add support for OnDemand bc_desktop app

--- a/ondemand/cluster-config.yml
+++ b/ondemand/cluster-config.yml
@@ -9,3 +9,9 @@ v2:
     cluster: "hpc"
     bin: "/usr/bin"
     conf: "/etc/slurm/slurm.conf"
+  batch_connect:
+    vnc:
+      script_wrapper: |
+        export PATH="/opt/TurboVNC/bin:$PATH"
+        export WEBSOCKIFY_CMD="/usr/bin/websockify"
+        %s
