--- a/coldfront/coldfront-nginx.conf
+++ b/coldfront/coldfront-nginx.conf
@@ -11,8 +11,8 @@ server {
     server_name coldfront;
 
     # certs sent to the client in SERVER HELLO are concatenated in ssl_certificate
-    ssl_certificate /srv/www/ssl/coldfront.crt;
-    ssl_certificate_key /srv/www/ssl/coldfront.key;
+    ssl_certificate /etc/pki/tls/certs/localhost.crt;
+    ssl_certificate_key /etc/pki/tls/private/localhost.key;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:50m;
     ssl_session_tickets off;
