--- a/ondemand/Dockerfile
+++ b/ondemand/Dockerfile
@@ -5,5 +5,6 @@ COPY . /build
 RUN /build/install.sh && rm -rf /build
 COPY cluster-config.yml /etc/ood/config/clusters.d/hpc.yml
 COPY bc_desktop.yml /etc/ood/config/apps/bc_desktop/hpc.yml
+COPY motd /etc/motd
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
