add jupyter to ondemand

--- a/ondemand/Dockerfile
+++ b/ondemand/Dockerfile
@@ -5,6 +5,7 @@ COPY . /build
 RUN /build/install.sh && rm -rf /build
 COPY cluster-config.yml /etc/ood/config/clusters.d/hpc.yml
 COPY bc_desktop.yml /etc/ood/config/apps/bc_desktop/hpc.yml
+COPY jupyter /var/www/ood/apps/sys/jupyter
 COPY motd /etc/motd
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
