add jupyter data to OOD container

--- a/ondemand/Dockerfile
+++ b/ondemand/Dockerfile
@@ -9,4 +9,7 @@ COPY jupyter /var/www/ood/apps/sys/jupyter
 COPY python_job_template /etc/ood/config/apps/myjobs/templates/python
 COPY motd /etc/motd
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+COPY notebook_data /data/notebook_data
+COPY initializers/dashboard.rb /etc/ood/config/apps/dashboard/initializers/dashboard.rb
+
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
