partly setup XDMoD/OOD integration at build time
the trailing lines at the end of the motd is intentional, because it
appears whenever you login in via the shell to the ondemand host

--- a/ondemand/cluster-config.yml
+++ b/ondemand/cluster-config.yml
@@ -15,3 +15,6 @@ v2:
         export PATH="/opt/TurboVNC/bin:$PATH"
         export WEBSOCKIFY_CMD="/usr/bin/websockify"
         %s
+  custom:
+    xdmod:
+      resource_id: 1
