--- a/coldfront/coldfront-nginx.conf
+++ b/coldfront/coldfront-nginx.conf
@@ -27,7 +27,7 @@ server {
     add_header Strict-Transport-Security max-age=15768000;
 
     location /static/ {
-        alias /srv/www/coldfront/static_root/;
+        alias /srv/www/static/;
     }
 
     location / {
@@ -36,6 +36,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://unix:/srv/www/coldfront/coldfront.sock;
+        proxy_pass http://unix:/srv/www/coldfront.sock;
     }
 }
