Fix #91. Remove deprecated slurm.conf settings

--- a/slurm/Dockerfile
+++ b/slurm/Dockerfile
@@ -5,7 +5,8 @@ ARG SLURM_VERSION
 COPY . /build
 RUN /build/install.sh && rm -rf /build
 COPY slurm.conf /etc/slurm/slurm.conf
-COPY slurmdbd.conf /etc/slurm/slurmdbd.conf
+COPY --chown=slurm:slurm slurmdbd.conf /etc/slurm/slurmdbd.conf
+RUN chmod 600 /etc/slurm/slurmdbd.conf
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 COPY pmlogger-supremm.config /etc/pcp/pmlogger/pmlogger-supremm.config
 COPY slurm-prolog.sh /usr/local/bin/slurm-prolog.sh
