Add ood plugin config

--- a/coldfront/coldfront.env
+++ b/coldfront/coldfront.env
@@ -11,6 +11,7 @@ TIME_ZONE=America/New_York
 PROJECT_ENABLE_PROJECT_REVIEW=True
 ALLOCATION_DEFAULT_ALLOCATION_LENGTH=365
 ALLOCATION_ACCOUNT_ENABLED=False
+ONDEMAND_URL=https://localhost:3443
 
 PLUGIN_AUTH_LDAP=True
 AUTH_LDAP_SERVER_URI='ldap://ldap'
