--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-HPCTS_VERSION=latest
-SLURM_VERSION=20.11.7
-MARIADB_VERSION=5.5
+HPCTS_VERSION="2022.07"
+SLURM_VERSION="21.08.8-2"
+MARIADB_VERSION=10.3
