Add first cut at multi-arch builds for amd64/arm64.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,3 +1,12 @@
-FROM rockylinux:8
+FROM --platform=linux/amd64 rockylinux:8 as stage-amd64
+
+FROM --platform=linux/arm64/v8 rockylinux:8 as stage-arm64
+
+ARG TARGETARCH
+
+FROM stage-${TARGETARCH} as final
+
+ARG TARGETARCH
+
 COPY . /build
 RUN /build/install.sh && rm -rf /build
