Multi arch ldap builds

--- a/ldap/Dockerfile
+++ b/ldap/Dockerfile
@@ -1,3 +1,12 @@
-FROM osixia/openldap:1.5.0
+FROM --platform=linux/amd64 osixia/openldap:1.5.0 as stage-amd64
+
+FROM --platform=linux/arm64/v8 osixia/openldap:1.5.0 as stage-arm64
+
+ARG TARGETARCH
+
+FROM stage-${TARGETARCH} as final
+
+ARG TARGETARCH
+
 COPY . /build
 RUN /build/install.sh && rm -rf /build
