Clean up ood source builds for aarch64.
- Split up builds into separate files
- Move some multi-arch logic into Dockerfile
- Fix up whitespace issues. See PR #120
- Add `-march=native -mtune=native` gcc opts
- Add `libaio-devel` package
- Force Nokogiri gem to install from source as pre-compiled arm64
  binaries require `GLIBC_2.29`.
- Monkey patch vnc.rb to remove `nohttpd` option. See #121

--- a/ondemand/Dockerfile
+++ b/ondemand/Dockerfile
@@ -1,8 +1,23 @@
 ARG HPCTS_VERSION=latest
 
 FROM --platform=linux/amd64 ubccr/hpcts:slurm-${HPCTS_VERSION} as stage-amd64
+RUN dnf install -y https://yum.osc.edu/ondemand/2.0/ondemand-release-web-2.0-1.noarch.rpm
+RUN dnf install -y netcat ondemand ondemand-dex
+RUN sed -i 's/\-nohttpd//' /opt/ood/ondemand/root/usr/share/gems/2.7/ondemand/2.0.26/gems/ood_core-0.19.0/lib/ood_core/batch_connect/templates/vnc.rb
 
 FROM --platform=linux/arm64 ubccr/hpcts:slurm-${HPCTS_VERSION} as stage-arm64
+RUN dnf install -y file lsof sudo gcc gcc-c++ git \
+        patch lua-posix rsync ruby ruby-devel python2 python3 \
+        nodejs sqlite sqlite-devel nmap-ncat httpd httpd-devel mod_ssl \
+        libcurl-devel autoconf openssl-devel jansson-devel libxml2-devel \
+        libxslt-devel gd-devel libaio-devel
+RUN gem install rake dotenv bcrypt
+COPY . /build
+RUN /build/install-dex-arm64.sh
+RUN /build/install-passenger-arm64.sh
+RUN /build/install-ood-arm64.sh
+RUN sed -i 's/\-nohttpd//' /usr/share/gems/gems/ood_core-0.19.0/lib/ood_core/batch_connect/templates/vnc.rb
+RUN rm -rf /build
 
 ARG TARGETARCH
 
