--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
     volumes:
       - etc_munge:/etc/munge
       - etc_slurm:/etc/slurm
+      - slurmdbd_state:/var/lib/slurmd
     expose:
       - "22"
       - "6819"
@@ -88,6 +89,7 @@ services:
       - etc_munge:/etc/munge
       - etc_slurm:/etc/slurm
       - home:/home
+      - slurmctld_state:/var/lib/slurmd
     expose:
       - "22"
       - "6817"
@@ -107,6 +109,7 @@ services:
       - etc_munge:/etc/munge
       - etc_slurm:/etc/slurm
       - home:/home
+      - cpn01_slurmd_state:/var/lib/slurmd
     expose:
       - "22"
       - "6818"
@@ -126,6 +129,7 @@ services:
       - etc_munge:/etc/munge
       - etc_slurm:/etc/slurm
       - home:/home
+      - cpn02_slurmd_state:/var/lib/slurmd
     expose:
       - "22"
       - "6818"
@@ -229,6 +233,10 @@ volumes:
   etc_slurm:
   home:
   var_lib_mysql:
+  cpn01_slurmd_state:
+  cpn02_slurmd_state:
+  slurmctld_state:
+  slurmdbd_state:
   data_db:
   srv_www:
 
