Update center name

--- a/coldfront/coldfront.env
+++ b/coldfront/coldfront.env
@@ -4,7 +4,7 @@ ENABLE_PROJECT_REVIEW=True
 DB_URL=mysql://coldfrontapp:9obCuAphabeg@mysql:3306/coldfront
 STATIC_ROOT=/srv/www/static
 
-CENTER_NAME="HPC Resources"
+CENTER_NAME="HPC Tutorial"
 LANGUAGE_CODE=en-us
 TIME_ZONE=America/New_York
 
