--- a/ondemand/cluster-config.yml
+++ b/ondemand/cluster-config.yml
@@ -13,7 +13,7 @@ v2:
     vnc:
       script_wrapper: |
         export PATH="/opt/TurboVNC/bin:$PATH"
-        export WEBSOCKIFY_CMD="/usr/bin/websockify"
+        export WEBSOCKIFY_CMD="/usr/local/bin/websockify"
         %s
   custom:
     xdmod:
