Changes made for tutorial

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,10 +1,10 @@
-FROM --platform=linux/amd64 rockylinux:8 as stage-amd64
+FROM --platform=linux/amd64 rockylinux:8 AS stage-amd64
 
-FROM --platform=linux/arm64/v8 rockylinux:8 as stage-arm64
+FROM --platform=linux/arm64/v8 rockylinux:8 AS stage-arm64
 
 ARG TARGETARCH
 
-FROM stage-${TARGETARCH} as final
+FROM stage-${TARGETARCH} AS final
 
 COPY . /build
 RUN /build/install.sh && rm -rf /build
