--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-HPCTS_VERSION="2023.07"
-SLURM_VERSION="21.08.8-2"
-MARIADB_VERSION=10.3
-MONGODB_VERSION=5.0
+HPCTS_VERSION="2025.01"
+SLURM_VERSION="24.11.1"
+MARIADB_VERSION=10.11.10
