--- a/ondemand/cluster-config.yml
+++ b/ondemand/cluster-config.yml
@@ -9,12 +9,11 @@ v2:
     cluster: "hpc"
     bin: "/usr/bin"
     conf: "/etc/slurm/slurm.conf"
+    copy_environment: false
   batch_connect:
     vnc:
       script_wrapper: |
         export PATH="/opt/TurboVNC/bin:$PATH"
         export WEBSOCKIFY_CMD="/usr/local/bin/websockify"
         %s
-  custom:
-    xdmod:
-      resource_id: 1
+  
